--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 05:14:00 PM</p>
+    <p class="lastupdate">09/05/2020 05:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">107.0&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">107.0&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">107.0&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.6&#176;F</td>
+        <td class="data">43.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.045)</td>
+        <td class="data">29.841 inHg (-0.042)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">35%</td>
+        <td class="data">34%</td>
       </tr>
     </tbody>
   </table>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="10:28:34 AM">
             56.1</span><br/>
-          <span title="05:04:22 PM">
-            41.6</span>
+          <span title="05:15:26 PM">
+            41.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
             59.6</span><br/>
-          <span title="05:04:22 PM (Saturday)">
-            41.6</span>
+          <span title="05:15:26 PM (Saturday)">
+            41.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/05/2020 05:04:22 PM">
-            41.6</span>
+          <span title="09/05/2020 05:15:26 PM">
+            41.3</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          336
+          330
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          6
+          5
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:10:02 PM">
-            87.9</span><br/>
+          <span title="05:15:02 PM">
+            88.0</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="05:33:01 AM">
             44</span><br/>
-          <span title="04:50:02 PM">
-            35</span>
+          <span title="05:18:02 PM">
+            34</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 2 hours, 27 minutes</td>
+      <td class="data">4 days, 2 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 2 hours, 27 minutes</td>
+      <td class="data">4 days, 2 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
