--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 06:34:00 PM</p>
+    <p class="lastupdate">09/05/2020 06:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">102.2&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">102.2&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">102.2&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">50.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.021)</td>
+        <td class="data">29.841 inHg (-0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.8&#176;F</td>
+        <td class="data">90.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          219
+          217
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:31:03 PM">
-            90.8</span><br/>
+          <span title="06:34:03 PM">
+            90.9</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 3 hours, 47 minutes</td>
+      <td class="data">4 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 3 hours, 47 minutes</td>
+      <td class="data">4 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
