--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:04:00 PM</p>
+    <p class="lastupdate">09/05/2020 10:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">84.8&#176;F</td>
+        <td class="data">85.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">84.8&#176;F</td>
+        <td class="data">85.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">84.8&#176;F</td>
+        <td class="data">85.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">50.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.901 inHg (0.062)</td>
+        <td class="data">29.906 inHg (0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph SSW (202&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">85.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">35%</td>
+        <td class="data">34%</td>
       </tr>
     </tbody>
   </table>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 7 hours, 17 minutes</td>
+      <td class="data">4 days, 7 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 7 hours, 17 minutes</td>
+      <td class="data">4 days, 7 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
