--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:49:00 PM</p>
+    <p class="lastupdate">09/05/2020 10:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.9&#176;F</td>
+        <td class="data">46.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.905 inHg (0.044)</td>
+        <td class="data">29.911 inHg (0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NW (315&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.5&#176;F</td>
+        <td class="data">85.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
     </tbody>
   </table>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          273
+          275
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 8 hours, 2 minutes</td>
+      <td class="data">4 days, 8 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 8 hours, 2 minutes</td>
+      <td class="data">4 days, 8 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
